tests/res/traits/error_obj_init.say
// `init` is not a callable member on a constructed instance.
trait Stateful { pub v; init(v) { this.v = v; } }
type T with Stateful {
    init(v) { Stateful.init(v); }
}
say t = T(5);
print(t.v); // expect: 5
t.init(9); // error: Invalid index: T doesn't have member "init" and doesn't have a getter
